--- a/dashboard/templates/dashboard/blog/list.html
+++ b/dashboard/templates/dashboard/blog/list.html
@@ -20,13 +20,20 @@
             </ol>
           </nav>
         <div class="input-group justify-content-end">
-                        <form action="{% url 'dashboard:categories' %}" method="GET" class="form-inline">
+                        <form action="{% url 'dashboard:blogs' %}" method="GET" class="form-inline">
                           <input
                             type="text"
-                            name="name"
+                            name="title"
                             class="form-control float-right searchInput"
-                            id="SearchCategory"
-                            placeholder="Category name"
+                            id="SearchBlog"
+                            placeholder="Blog Title"
+                          />
+                          <input
+                            type="text"
+                            name="quotes_by"
+                            class="form-control float-right searchInput"
+                            id="SearchBlog"
+                            placeholder="Author"
                           />
                           <div class="input-group-append">
                             <button type="submit" class="btn btn-secondary">
@@ -44,57 +51,49 @@
             <div class="col-12">
                 <div class="card card-default">
                     <div class="card-header card-header-border-bottom justify-content-between">
-											<h2>CATEGORIES</h2>
-                    <a href="{% url 'dashboard:category-create' %}"  type="button" class="mb-1 btn btn-outline-primary">Add Category</a>
-
-                   
+											<h2>BLOGS</h2>
+                    <a href="{% url 'dashboard:blogs-create' %}"  type="button" class="mb-1 btn btn-outline-primary">Add Blog</a>
+          
                       
 </div>
-         
-                     
-									
-										<div class="card-body">
-											{% comment %} <p class="mb-5">Similar to tables and dark tables, use the modifier classes <code>.thead-light</code> or <code>.thead-dark</code> to make &lt;thead&gt;s appear light or dark gray. Read bootstrap documentation for <a href="http://getbootstrap.com/docs/4.1/content/tables/#table-head-options" target="_blank"> more details.</a></p> {% endcomment %}
-											<table class="table table-hover ">
+<div class="card-body">
+							<table class="table table-hover ">
 												<thead>
 													<tr>
 														<th scope="col">SID</th>
-														<th scope="col">Category</th>
-														<th scope="col">Description</th>
-														<th scope="col">Image</th>
+														<th scope="col">Title</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Description</th>
+                            <th scope="col">Image</th>
                             <th scope="col">Action</th>
 													</tr>
 												</thead>
 												<tbody>
-                         {% for category in object_list %} 
+                          {% for blogs in object_list %} 
 													<tr>
-									
-                            <td scope="row">{{category.slug}}</td>
-                           
-														<td>{{category.name}}</td>
-														<td>{{category.description|safe}}</td>
-														<td><img width="100px" height="100px" src="{{ category.img.url }}" alt="" /></td>
+                            <td scope="row">{{forloop.counter}}</td>
+                            <td>{{blogs.title}}</td>
+                            <td>{{blogs.date}}</td>
+                            <td>{{blogs.description|safe|truncatewords:5}}</td>
+                            <td><img width="100px" height="100px" src="{{ blogs.image.url }}" alt="" /></td>
                             <td>
-                              <span>
-                           <a href="{% url 'dashboard:category-update' category.slug %}" class="btn btn-sm btn-success"> <span class ="mdi mr-1 mdi-square-edit-outline">Edit</span></a>
-                    </span>
-                      <span>
-                    <a  href="{% url 'dashboard:category-delete' category.slug %}"class="btn btn-sm btn-danger delete"><span class ="mdi mr-1 mdi-trash-can">Delete</span></a>
-
-</span>
-                        
-                            
-                            </td>
+                                <span>
+                                <a href="{% url 'dashboard:blogs-update' blogs.pk%}" class="btn btn-sm btn-success"> <span class ="mdi mr-1 mdi-square-edit-outline">Edit</span></a>
+                                </span>
+                                <span>
+                                <a  href="{% url 'dashboard:blogs-delete' blogs.pk %}"class="btn btn-sm btn-danger delete"><span class ="mdi mr-1 mdi-trash-can">Delete</span></a>
+                                 </span>
+                                </td>
 
 													</tr>
-                           {%endfor%}
+                          {%endfor%}
 												</tbody>
 											</table>
 										</div>
 									</div>
-	</div>
+              </div>
+        </div>
  </div>
-          </div>
 
 {% endblock %}
 {% block script %}
