--- a/dashboard/templates/dashboard/size/list.html
+++ b/dashboard/templates/dashboard/size/list.html
@@ -21,7 +21,7 @@
             </nav>
             
 <div class="input-group justify-content-end">
-                    <form action="{% url 'dashboard:size-list' %}" method="GET" class="form-inline">
+                    <form action="{% url 'dashboard:sizes' %}" method="GET" class="form-inline">
                       <input type="text" name="name" class="form-control float-right searchInput"
                         id="SearchBrand"
                         placeholder="size"
@@ -48,7 +48,7 @@
                     
                     
                     <div class="card-body">
-                        <table class="table table-striped">
+                        <table class="table table-hover ">
                             <thead>
                                 <tr>
                                     <th scope="col">S.N</th>
