--- a/dashboard/templates/dashboard/user/list.html
+++ b/dashboard/templates/dashboard/user/list.html
@@ -19,38 +19,7 @@
                 </ol>
 
             </nav>
-               {% comment %} <div class="input-group justify-content-end">
-                    <form action="{% url 'dashboard:product-list' %}" method="GET" class="form-inline">
-                       <input
-                            type="text"
-                            name="name"
-                            class="form-control float-right searchInput"
-                            id="Search"
-                            placeholder="name"
-                          />
-                        <input
-                            type="text"
-                            name="brands"
-                            class="form-control float-right searchInput"
-                            id="Search"
-                            placeholder="brands"
-                          />
-                        <input
-                            type="text"
-                            name="categories"
-                            class="form-control float-right searchInput"
-                            id="Search"
-                            placeholder="category"
-                          />
-
-                      <div class="input-group-append">
-                        <button type="button" class="btn btn-secondary">
-                          <span class="mdi mdi-magnify"></span>
-                        </button>
-                      </div>
-                    </form>
-            </div> {% endcomment %}
-           
+            
         
               
         <div class="row">
@@ -66,7 +35,7 @@
                     </div>
         
                     <div class="card-body">
-                        <table class="table table-striped">
+                        <table class="table table-hover ">
                             <thead>
                                 <tr>
                                   <th scope="col">SN</th>
