--- a/dashboard/templates/dashboard/product/list.html
+++ b/dashboard/templates/dashboard/product/list.html
@@ -18,7 +18,7 @@
 
             </nav>
                <div class="input-group justify-content-end">
-                    <form action="{% url 'dashboard:product-list' %}" method="GET" class="form-inline">
+                    <form action="{% url 'dashboard:products' %}" method="GET" class="form-inline">
                        <input
                             type="text"
                             name="name"
@@ -64,7 +64,7 @@
                     </div>
         
                     <div class="card-body">
-                        <table class="table table-striped">
+                        <table class="table table-hover ">
                             <thead>
                                 <tr>
                                     <th scope="col">S.N</th>
