--- a/dashboard/templates/dashboard/product/specific-list.html
+++ b/dashboard/templates/dashboard/product/specific-list.html
@@ -18,7 +18,7 @@
 
             </nav>
                <div class="input-group justify-content-end">
-                    <form action="{% url 'dashboard:specific-product-list' %}" method="GET" class="form-inline">
+                    <form action="{% url 'dashboard:specific-products' %}" method="GET" class="form-inline">
                        <input
                             type="text"
                             name="name"
@@ -57,7 +57,7 @@
                     </div>
         
                     <div class="card-body">
-                        <table class="table table-striped">
+                        <table class="table table-hover ">
                             <thead>
                                 <tr>
                                     <th scope="col">S.N</th>
