--- a/dashboard/templates/dashboard/tag/form.html
+++ b/dashboard/templates/dashboard/tag/form.html
@@ -7,31 +7,24 @@
             <div class="col-12">
                 <div class="card card-default">
                     <div class="card-header card-header-border-bottom">
-                        <h2>Basic Form Controls</h2>
+                        <h2>Create Tag</h2>
                     </div>
                     <div class="card-body">
                         <form method="POST" enctype="multipart/form-data">
                             {% csrf_token %}
-                            {{ form.media }}
                            
                             <div class="row form-group">
                                 <div class="col-md-6 col-sm-12">
-                                    <label for="exampleFormControlInput1">Brand Name</label>
-                                    {{ form.name }}
+                                    <label for="exampleFormControlInput1">Tag</label>
+                                    {{ form.title }}
+                                    <span class="form-error">{{ form.errors.title }}</span>
                                 </div>
-                            </div>
-                            <div class="row form-group">
-                                <div class="col-md-6 col-sm-12">
-                                    <label for="exampleFormControlInput1">Logo </label>
-                                    {{ form.logo }}
-                                </div>
-                                
                             </div>
                             
                             
                             <div class="form-footer pt-4 pt-5 mt-4 border-top">
                                 <button type="submit" class="btn btn-primary btn-default">Submit</button>
-                                <a href="{% url 'dashboard:product-list' %}" class="btn btn-secondary btn-default">Cancel</a>
+                                <a href="{% url 'dashboard:tags' %}" class="btn btn-secondary btn-default">Cancel</a>
                             </div>
                         </form>
                     </di>
