--- a/dashboard/templates/dashboard/tag/list.html
+++ b/dashboard/templates/dashboard/tag/list.html
@@ -3,7 +3,8 @@
 {% block content %}
 <div class="content-wrapper">
     <div class="content">							
-                     
+
+                 
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb p-0">
                 <li class="breadcrumb-item">
@@ -14,63 +15,61 @@
                 <li class="breadcrumb-item">
                     Our
                 </li>
-                <li class="breadcrumb-item" aria-current="page">Brands</li>
+                <li class="breadcrumb-item" aria-current="page">Tags</li>
                 </ol>
 
             </nav>
-          <div class="input-group justify-content-end">
-                    <form action="{% url 'dashboard:brands' %}" method="GET" class="form-inline">
-                      <input
-                        type="text"
-                        name="name"
-                        class="form-control float-right searchInput"
-                        id="SearchBrand"
-                        placeholder="Brand name"
+            
+<div class="input-group justify-content-end">
+                    <form action="{% url 'dashboard:tags' %}" method="GET" class="form-inline">
+                      <input type="text" name="tag name" class="form-control float-right searchInput"
+                        id="SearchTag"
+                        placeholder="Tag name"
                       />
                       <div class="input-group-append">
-                         <button type="submit" class="mb-1 btn btn-success">
+                         <button type="button" class="mb-1 btn btn-secondary">
                           <span class="mdi mdi-magnify"></span>
                         </button>
                       </div>
                     </form>
                   </div>
 
-     
 
-     <div class="row">
+        <div class="row ">
             
             <div class="col-12">
                 <div class="card card-default">
                     <div class="card-header card-header-border-bottom justify-content-between">
-                        <h2>Brands List</h2>
-                                    <a href="{% url 'dashboard:brand-create' %}" type="button" class="mb-1 btn btn-outline-primary">Add Brand</a>
+                        <h2>Sizes List</h2>
+                        <a href="{% url 'dashboard:tag-create' %}" type="button" class="mb-1 btn btn-outline-primary">Add Tag</a>
 
-                </div>
-        
+
+                    </div>
+                    
+                    
                     <div class="card-body">
                         <table class="table table-hover ">
                             <thead>
                                 <tr>
                                     <th scope="col">S.N</th>
-                                    <th scope="col">Name</th>
-                                    <th scope="col">Logo</th>
-                                    <th>Action</th>
+                                    <th scope="col">Tag</th>
+                                    <th width="25%">Action</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for brand in object_list %}
+                                {% for tag in object_list %}
                                 <tr>
                                     <td scope="row">{{ forloop.counter }}</td>
-                                    <td>{{ brand.name }}</td>
-                                    <td><img src="{{ brand.logo.url}}" style="width: 20%"/></td>
+                                    <td>{{ tag.title}}</td>
                                     <td>
                                     <span>
-                                            <a href="{% url 'dashboard:brand-update' brand.pk %}" class="btn btn-sm btn-success"><span class ="mdi mr-1 mdi-square-edit-outline">Edit</span></a>
+                                            <a href="{% url 'dashboard:tag-update' tag.pk %}" class="btn btn-sm btn-success"><span class ="mdi mr-1 mdi-square-edit-outline">Edit</span></a>
                                         </span>
                                         <span>
-                                            <a href="{% url 'dashboard:brand-delete' brand.pk %}" class="btn btn-sm btn-danger delete"><span class ="mdi mr-1 mdi-trash-can">Delete</span></a>
+                                            <a href="{% url 'dashboard:tag-delete' tag.pk %}" class="btn btn-sm btn-danger delete"><span class ="mdi mr-1 mdi-trash-can">Delete</span></a>
                                         </span>
-                                        
+
+                                      
                                     </td>
                                 </tr>
                                 {% endfor %}
