--- a/dashboard/templates/dashboard/base/sidebar.html
+++ b/dashboard/templates/dashboard/base/sidebar.html
@@ -107,6 +107,12 @@
               </a>
             </li>
             <li  class="has-sub" >
+              <a class="sidenav-item-link" href="{% url 'dashboard:newsletter-list' %}">
+                <i class="mdi mdi-view-dashboard-outline"></i>
+                <span class="nav-text">Newsletter</span>
+              </a>
+            </li>
+            <li  class="has-sub" >
               <a class="sidenav-item-link" href="javascript:void(0)" data-toggle="collapse" data-target="#customer"
                 aria-expanded="false" aria-controls="customer">
                 <i class="mdi mdi-view-dashboard-outline"></i>
