blogs and testimonials

--- a/dashboard/templates/dashboard/base/sidebar.html
+++ b/dashboard/templates/dashboard/base/sidebar.html
@@ -32,7 +32,7 @@
             <li  class="has-sub active expand" >
               <a class="sidenav-item-link" href="javascript:void(0)" data-toggle="collapse" data-target="#product"
                 aria-expanded="false" aria-controls="product">
-                <i class="mdi mdi-format-list-bulleted"></i>
+                <i class="mdi mdi-view-list"></i>
                 <span class="nav-text">Products</span> <b class="caret"></b>
               </a>
               <ul  class="collapse show"  id="product"
@@ -56,14 +56,14 @@
           
             <li  class="has-sub" >
               <a class="sidenav-item-link" href="{% url 'dashboard:brands' %}">
-                <i class="mdi mdi-view-dashboard-outline"></i>
+                <i class="mdi mdi-view-list"></i>
                 <span class="nav-text">Brands</span>
               </a>
             </li>
 
             <li  class="has-sub" >
               <a class="sidenav-item-link" href="{% url 'dashboard:categories' %}">
-                <i class="mdi mdi-view-dashboard-outline"></i>
+                <i class="mdi mdi-view-list"></i>
                 <span class="nav-text">Categories</span>
               </a>
             </li>
@@ -71,13 +71,13 @@
            
                <li  class="has-sub" >
               <a class="sidenav-item-link" href="{% url 'dashboard:sizes' %}">
-                <i class="mdi mdi-view-dashboard-outline"></i>
+                <i class="mdi mdi-view-list"></i>
                 <span class="nav-text">Sizes</span>
               </a>
               </li>
                <li  class="has-sub" >
               <a class="sidenav-item-link" href="{% url 'dashboard:tags' %}">
-                <i class="mdi mdi-view-dashboard-outline"></i>
+                <i class="mdi mdi-view-list"></i>
                 <span class="nav-text">Tags</span>
               </a>
               </li>
@@ -102,19 +102,19 @@
             
             <li  class="has-sub" >
               <a class="sidenav-item-link" href="{% url 'dashboard:contacts' %}">
-                <i class="mdi mdi-view-dashboard-outline"></i>
+                <i class="mdi mdi-phone"></i>
                 <span class="nav-text">Contact</span>
               </a>
             </li>
             <li  class="has-sub" >
               <a class="sidenav-item-link" href="{% url 'dashboard:services' %}">
-                <i class="mdi mdi-view-dashboard-outline"></i>
+                <i class="mdi mdi-format-list-bulleted-type"></i>
                 <span class="nav-text">Service</span>
               </a>
             </li>
             <li  class="has-sub" >
               <a class="sidenav-item-link" href="{% url 'dashboard:messages' %}">
-                <i class="mdi mdi-view-dashboard-outline"></i>
+                <i class="mdi mdi-message-bulleted"></i>
                 <span class="nav-text">Message</span>
               </a>
             </li>
