--- a/dashboard/templates/dashboard/contact/list.html
+++ b/dashboard/templates/dashboard/contact/list.html
@@ -19,7 +19,7 @@
 
             </nav>
           <div class="input-group justify-content-end">
-                    <form action="{% url 'dashboard:contact-list' %}" method="GET" class="form-inline">
+                    <form action="{% url 'dashboard:contacts' %}" method="GET" class="form-inline">
                       <input
                         type="text"
                         name="email"
