--- a/dashboard/templates/dashboard/contact/form.html
+++ b/dashboard/templates/dashboard/contact/form.html
@@ -42,7 +42,7 @@
                             
                             <div class="form-footer pt-4 pt-5 mt-4 border-top">
                                 <button type="submit" class="btn btn-primary btn-default">Submit</button>
-                                <a href="{% url 'dashboard:contact-list' %}" class="btn btn-secondary btn-default">Cancel</a>
+                                <a href="{% url 'dashboard:contacts' %}" class="btn btn-secondary btn-default">Cancel</a>
                             </div>
                         </form>
                     </div>
