--- a/dashboard/templates/dashboard/auth/login.html
+++ b/dashboard/templates/dashboard/auth/login.html
@@ -94,7 +94,7 @@
                         </label>
                 
                       </div>
-                      <p><a class="text-blue" href="{% url 'dashboard:recover-password' %}">Forgot Your Password?</a></p>
+                      <p><a class="text-blue" href="{% url 'dashboard:forgot-password' %}">Forgot Your Password?</a></p>
                     </div>
                     <button type="submit" class="btn btn-lg btn-primary btn-block mb-4">Login</button>
                     <p>Don't have an account yet ?
