--- a/dashboard/templates/dashboard/auth/reset-password.html
+++ b/dashboard/templates/dashboard/auth/reset-password.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Sunset Hotel</title>
+    <title>Ekocart</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link
@@ -60,7 +60,7 @@
       <!-- /.login-logo -->
       <div class="card card-outline card-primary">
         <div class="card-header text-center">
-          <a href="/" class="h1"><b>Sunset</b>Hotel</a>
+          <a href="/" class="h1"><b>Ekocart</a>
         </div>
         <div class="card-body">
           <p class="login-box-msg">Reset Your Password</p>
