--- a/dashboard/templates/dashboard/base/sidebar.html
+++ b/dashboard/templates/dashboard/base/sidebar.html
@@ -67,13 +67,18 @@
                 <span class="nav-text">Categories</span>
               </a>
             </li>
+            <li  class="has-sub" >
+                <a class="sidenav-item-link" href="{% url 'dashboard:colors' %}">
+                  <i class="mdi mdi-view-list"></i>
+                  <span class="nav-text">Colors</span>
+                </a>
+              </li>
            
-           
-               <li  class="has-sub" >
-              <a class="sidenav-item-link" href="{% url 'dashboard:sizes' %}">
-                <i class="mdi mdi-view-list"></i>
-                <span class="nav-text">Sizes</span>
-              </a>
+              <li  class="has-sub" >
+                <a class="sidenav-item-link" href="{% url 'dashboard:sizes' %}">
+                  <i class="mdi mdi-view-list"></i>
+                  <span class="nav-text">Sizes</span>
+                </a>
               </li>
                <li  class="has-sub" >
               <a class="sidenav-item-link" href="{% url 'dashboard:tags' %}">
