--- a/dashboard/templates/dashboard/auth/login.html
+++ b/dashboard/templates/dashboard/auth/login.html
@@ -68,7 +68,7 @@
                       <path class="logo-fill-white" fill="#FFF" d="M11 4v25l8 4V0z" />
                     </g>
                   </svg>
-                  <span class="brand-name">Sleek Dashboard</span>
+                  <span class="brand-name">Ekocart Dashboard</span>
                 </a>
               </div>
             </div>
@@ -97,9 +97,7 @@
                       <p><a class="text-blue" href="{% url 'dashboard:forgot-password' %}">Forgot Your Password?</a></p>
                     </div>
                     <button type="submit" class="btn btn-lg btn-primary btn-block mb-4">Login</button>
-                    <p>Don't have an account yet ?
-                      <a class="text-blue" href="sign-up.html">Sign Up</a>
-                    </p>
+                    
                   </div>
                 </div> 
                 
@@ -108,11 +106,11 @@
           </div>
         </div>
       </div>
-      <div class="copyright pl-0">
+      {% comment %} <div class="copyright pl-0">
         <p class="text-center">&copy; 2018 Copyright Sleek Dashboard Bootstrap Template by
           <a class="text-primary" href="http://www.iamabdus.com/" target="_blank">Abdus</a>.
         </p>
-      </div>
+      </div> {% endcomment %}
     </div>
 </body>
 </html>
