--- a/dashboard/templates/dashboard/auth/reset-password.html
+++ b/dashboard/templates/dashboard/auth/reset-password.html
@@ -1,70 +1,13 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Ekocart</title>
 
-    <!-- Google Font: Source Sans Pro -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
-    />
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="{% static 'dashboard/assets/plugins/fontawesome-free/css/all.min.css' %}"
-    />
-    <!-- icheck bootstrap -->
-    <link
-      rel="stylesheet"
-      href="{% static 'dashboard/assets/plugins/icheck-bootstrap/icheck-bootstrap.min.css' %}"
-    />
-    <!-- Theme style -->
-    <link
-      rel="stylesheet"
-      href="{% static 'dashboard/assets/dist/css/adminlte.min.css' %}"
-    />
-
-
- {% block style %}
-    <style> 
-      .form-error{
-        color : red;
-        padding: 0;
-      }
-
-      .form-error ul li{
-        list-style:none;
-        padding: 0;
-      }
-
-      .form-inline{
-          display: flex;
-          flex-flow: row wrap;
-          align-items: center;
-      }   
-
-      .form-inline input{
-            margin: 5px 5px 5px 0;
-      } 
-
-      </style>
-    {% endblock %}
-
-  </head>
-  <body class="hold-transition login-page">
-
-    <div class="login-box">
+{% extends 'dashboard/auth/base.html' %}
+{% block content %}
+  <div class="login-box">
       <!-- /.login-logo -->
       <div class="card card-outline card-primary">
         <div class="card-header text-center">
           <a href="/" class="h1"><b>Ekocart</a>
         </div>
         <div class="card-body">
-          <p class="login-box-msg">Reset Your Password</p>
-        
           <form action="" method="post">
             {% csrf_token %}
             <p class="form-error">{{error}}</p>
@@ -97,13 +40,5 @@
       </div>
       <!-- /.card -->
     </div>
-    <!-- /.login-box -->
 
-    <!-- jQuery -->
-    <script src="{% static 'dashboard/assets/plugins/jquery/jquery.min.js' %}"></script>
-    <!-- Bootstrap 4 -->
-    <script src="{% static 'dashboard/assets/plugins/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-    <!-- AdminLTE App -->
-    <script src="{% static 'dashboard/assets/dist/js/adminlte.min.js' %}"></script>
-  </body>
-</html>
+{% endblock %}
