--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -23,6 +23,10 @@
 
 <!-- inject css end -->
 
+<!-- Toastr -->
+    <link type="text/css" href="{% static 'home/assets/toastr/toastr.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'home/assets/css/theme.css' %}">
+
 </head>
 
 <body>
@@ -73,8 +77,32 @@
 
 <script src="{%static 'home/assets/js/theme-plugin.js'%}"></script>
 <script src="{% static 'home/assets/js/theme-script.js'%}"></script>
+  <script src="{% static 'home/assets/toastr/toastr.min.js' %}"></script>
+  
 
 <!-- inject js end -->
+      <script>
+        toastr.options = {
+               "debug": false,
+               "newestOnTop": false,
+               "positionClass": "toast-top-right",
+               "closeButton": true,
+               "timeOut": "5000",
+               "progressBar": false
+           }; 
+   
+           {% for message in messages %} 
+           {% if message.level == 20 %}
+               toastr.info("{{ message }}"); 
+           {% elif message.level == 25 %}
+               toastr.success("{{ message }}");
+           {% elif message.level == 30 %}
+               toastr.warning("{{ message }}"); 
+           {% elif message.level == 40 %}
+               toastr.error("{{ message }}"); 
+           {% endif %} 
+           {% endfor %}
+    </script>
 
 </body>
 
