--- a/dashboard/templates/dashboard/base/sidebar.html
+++ b/dashboard/templates/dashboard/base/sidebar.html
@@ -4,7 +4,7 @@
     <div id="sidebar" class="sidebar sidebar-with-footer">
       <!-- Aplication Brand -->
       <div class="app-brand">
-        <a href="/index.html">
+        <a href="{%url 'dashboard:dashboard' %}">
           <svg
             class="brand-icon"
             xmlns="http://www.w3.org/2000/svg"
@@ -22,7 +22,8 @@
               <path class="logo-fill-white" fill="#FFF" d="M11 4v25l8 4V0z" />
             </g>
           </svg>
-          <span class="brand-name">Fashion Ecommerce</span>
+       
+          <span class="brand-name">Ekocart Dashboard</span>
         </a>
       </div>
  <!-- begin sidebar scrollbar -->
