--- a/dashboard/templates/dashboard/product/form.html
+++ b/dashboard/templates/dashboard/product/form.html
@@ -1,5 +1,5 @@
 {% extends 'dashboard/base/base.html' %}
-{% block title %} product create {% endblock %}
+{% block title %} New Product {% endblock %}
 {% block style %}
 <style>
 {% include 'dashboard/documents/upload-file.css' %}
