--- a/dashboard/templates/dashboard/user/list.html
+++ b/dashboard/templates/dashboard/user/list.html
@@ -1,4 +1,6 @@
-{% extends 'dashboard/base/index.html' %} {% block content %}
+{% extends 'dashboard/base/index.html' %} 
+{% block title %} Users {% endblock %}
+{% block content %}
 <script>
   M.toast({html:" toasted!", classes: "blue rounded",displayLength:2000});
 </script>
