--- a/dashboard/templates/dashboard/contact/form.html
+++ b/dashboard/templates/dashboard/contact/form.html
@@ -1,5 +1,5 @@
 {% extends 'dashboard/base/base.html' %}
-
+{% block title %} Edit Contact {% endblock %}
 {% block content %}
 <div class="content-wrapper">
     <div class="content">							
