--- a/dashboard/templates/dashboard/product/specific-list.html
+++ b/dashboard/templates/dashboard/product/specific-list.html
@@ -1,5 +1,5 @@
 {% extends 'dashboard/base/base.html' %}
-
+{% block title %} {{ category }} Products {% endblock %}
 {% block content %}
 <div class="content-wrapper">
     <div class="content">					        
