--- a/dashboard/templates/dashboard/testimonial/list.html
+++ b/dashboard/templates/dashboard/testimonial/list.html
@@ -1,4 +1,5 @@
 {% extends 'dashboard/base/index.html' %} 
+{% block title %} Testimonials {% endblock %}
 {% load static %} 
 {% block content %}
 
