--- a/dashboard/templates/dashboard/user/form.html
+++ b/dashboard/templates/dashboard/user/form.html
@@ -1,4 +1,5 @@
 {% extends 'dashboard/base/index.html' %} 
+{% block title %} New User{% endblock %}
 {% block style %}
 	<style>
 		.select2-selection__choice__display{
