--- a/dashboard/templates/dashboard/base/mainheader.html
+++ b/dashboard/templates/dashboard/base/mainheader.html
@@ -66,20 +66,22 @@
           <li class="dropdown user-menu">
             <button href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
               <img src="{% static 'dashboard/assets/img/user/user.png' %}" class="user-image" alt="User Image" />
-              <span class="d-none d-lg-inline-block"> {% if request.user.is_authenticated %}
-                                              {{request.user.username}}
-                                              {% endif %}</span>
+              <span class="d-none d-lg-inline-block"> 
+                {% if request.user.is_authenticated %}
+                {{request.user.username}}
+                {% endif %}
+              </span>
             </button>
             <ul class="dropdown-menu dropdown-menu-right">
               <!-- User image -->
               <li class="dropdown-header">
                 <img src="{% static 'dashboard/assets/img/user/user.png' %}" class="img-circle" alt="User Image" />
                 <div class="d-inline-block">
-                  {% if request.user.is_authenticated %}
-                                              {{request.user.username}}
-                                              {% endif %}<small class="pt-1">{% if request.user.is_authenticated %}
-                                              {{request.user.email}}
-                                              {% endif %}</small>
+                  {% if request.user.is_staff %}
+                    {{request.user.username}}
+                    {% endif %}<small class="pt-1">{% if request.user.is_staff %}
+                    {{request.user.email}}
+                  {% endif %}</small>
                 </div>
               </li>
   
