--- a/dashboard/templates/dashboard/base/sidebar.html
+++ b/dashboard/templates/dashboard/base/sidebar.html
@@ -4,7 +4,7 @@
     <div id="sidebar" class="sidebar sidebar-with-footer">
       <!-- Aplication Brand -->
       <div class="app-brand">
-        <a href="/index.html">
+        <a href="{% url 'dashboard:dashboard' %}">
           <svg
             class="brand-icon"
             xmlns="http://www.w3.org/2000/svg"
