marked and selling price added

--- a/dashboard/templates/dashboard/product/form.html
+++ b/dashboard/templates/dashboard/product/form.html
@@ -39,17 +39,13 @@
                                 </div>
                             </div>
                             <div class="row form-group">
-                                <div class="col-md-4 col-sm-12">
-                                    <label for="exampleFormControlInput1">Price </label>
-                                    {{ form.price }}
+                                <div class="col-md-6 col-sm-12">
+                                    <label for="exampleFormControlInput1">Marked Price</label>
+                                    {{ form.marked_price }}
                                 </div>
-                                <div class="col-md-4 col-sm-12">
+                                <div class="col-md-6 col-sm-12">
                                     <label for="exampleFormControlPassword">discount percent</label>
                                     {{ form.discount_percent }}
-                                </div>
-                                <div class="col-md-4 col-sm-12">
-                                    <label for="exampleFormControlPassword">discount </label>
-                                    {{ form.discount_amt }}
                                 </div>
                             </div>
                             
@@ -70,17 +66,13 @@
                             </div>
                             
                             <div class="row form-group">
-                                <div class="col-md-3 col-sm-6">
+                                <div class="col-md-4 col-sm-6">
                                     <label for="exampleFormControlPassword">VAT Inclusive</label>
                                     {{ form.vat_incl }} <span>Yes</span>
                                 </div>
-                                <div class="col-md-4 col-sm-6">
+                                <div class="col-md-6 col-sm-6">
                                     <label for="exampleFormControlInput1">VAt Percent </label>
                                     {{ form.vat_percent }}
-                                </div>
-                                <div class="col-md-5 col-sm-12">
-                                    <label for="exampleFormControlPassword">VAT amount</label>
-                                    {{ form.vat_amt }}
                                 </div>
                             </div>
                             <div class="form-group">
